--- a/filepicker/src/main/res/xml/provider_paths.xml
+++ b/filepicker/src/main/res/xml/provider_paths.xml
@@ -18,4 +18,7 @@
     <external-path
         name="filespath"
         path="/" />
+    <external-files-path
+        name="my_images"
+        path="/" />
 </paths>
