--- a/filepicker/src/main/res/drawable/ic_pdf.xml
+++ b/filepicker/src/main/res/drawable/ic_pdf.xml
@@ -3,31 +3,31 @@
     android:height="512dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
-  <path
-      android:pathData="M511.344,274.266C511.77,268.231 512,262.143 512,256C512,114.615 397.385,0 256,0S0,114.615 0,256c0,117.769 79.53,216.949 187.809,246.801L511.344,274.266z"
-      android:fillColor="#c30b15"/>
-  <path
-      android:pathData="M511.344,274.266L314.991,77.913L119.096,434.087l68.714,68.714C209.522,508.787 232.385,512 256,512C391.243,512 501.976,407.125 511.344,274.266z"
-      android:fillColor="#85080e"/>
-  <path
-      android:pathData="M278.328,333.913l-22.617,-256l-136.615,0l0,233.739z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M392.904,311.652l0,-155.826l-55.652,-22.261l-22.261,-55.652l-59.28,0l0.356,256z"
-      android:fillColor="#e8e6e6"/>
-  <path
-      android:pathData="M314.991,155.826l0,-77.913l77.913,77.913z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M119.096,311.652h273.809v122.435h-273.809z"
-      android:fillColor="#fc0f1a"/>
-  <path
-      android:pathData="M204.871,346.387c13.547,0 21.341,6.659 21.341,18.465c0,12.412 -7.795,19.601 -21.341,19.601h-9.611v14.909h-13.471v-52.975L204.871,346.387L204.871,346.387zM195.26,373.858h8.93c5.904,0 9.308,-2.952 9.308,-8.552c0,-5.525 -3.406,-8.324 -9.308,-8.324h-8.93V373.858z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M257.928,346.387c16.649,0 28.152,10.746 28.152,26.487c0,15.666 -11.655,26.488 -28.683,26.488h-22.25v-52.975H257.928zM248.619,388.615h9.611c8.249,0 14.151,-6.357 14.151,-15.665c0,-9.384 -6.205,-15.817 -14.757,-15.817h-9.006V388.615z"
-      android:fillColor="#ffffff"/>
-  <path
-      android:pathData="M308.563,356.982v12.26h23.763v10.596h-23.763v19.525h-13.471v-52.975h39.277v10.595h-25.806V356.982z"
-      android:fillColor="#ffffff"/>
+    <path
+        android:fillColor="#c30b15"
+        android:pathData="M511.344,274.266C511.77,268.231 512,262.143 512,256C512,114.615 397.385,0 256,0S0,114.615 0,256c0,117.769 79.53,216.949 187.809,246.801L511.344,274.266z" />
+    <path
+        android:fillColor="#85080e"
+        android:pathData="M511.344,274.266L314.991,77.913L119.096,434.087l68.714,68.714C209.522,508.787 232.385,512 256,512C391.243,512 501.976,407.125 511.344,274.266z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M278.328,333.913l-22.617,-256l-136.615,0l0,233.739z" />
+    <path
+        android:fillColor="#e8e6e6"
+        android:pathData="M392.904,311.652l0,-155.826l-55.652,-22.261l-22.261,-55.652l-59.28,0l0.356,256z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M314.991,155.826l0,-77.913l77.913,77.913z" />
+    <path
+        android:fillColor="#fc0f1a"
+        android:pathData="M119.096,311.652h273.809v122.435h-273.809z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M204.871,346.387c13.547,0 21.341,6.659 21.341,18.465c0,12.412 -7.795,19.601 -21.341,19.601h-9.611v14.909h-13.471v-52.975L204.871,346.387L204.871,346.387zM195.26,373.858h8.93c5.904,0 9.308,-2.952 9.308,-8.552c0,-5.525 -3.406,-8.324 -9.308,-8.324h-8.93V373.858z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M257.928,346.387c16.649,0 28.152,10.746 28.152,26.487c0,15.666 -11.655,26.488 -28.683,26.488h-22.25v-52.975H257.928zM248.619,388.615h9.611c8.249,0 14.151,-6.357 14.151,-15.665c0,-9.384 -6.205,-15.817 -14.757,-15.817h-9.006V388.615z" />
+    <path
+        android:fillColor="#ffffff"
+        android:pathData="M308.563,356.982v12.26h23.763v10.596h-23.763v19.525h-13.471v-52.975h39.277v10.595h-25.806V356.982z" />
 </vector>
