--- a/album_gallary/src/main/res/values/colors.xml
+++ b/album_gallary/src/main/res/values/colors.xml
@@ -19,5 +19,5 @@
     <color name="albumSheetLayer">#EE2B2B2B</color>
 
     <color name="white">#fff</color>
-    <color name="black">#000</color>
+    <color name="black_al_mai">#000</color>
 </resources>
