--- a/album_gallary/src/main/res/values-night/themes.xml
+++ b/album_gallary/src/main/res/values-night/themes.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/albumColorPrimary</item>
         <item name="colorSecondaryVariant">@color/albumColorPrimary</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/black_al_mai</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
