--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -1,33 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/ivChooseFile"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:layout_marginTop="8dp"
-        android:id="@+id/ivChooseFile"
-        android:src="@drawable/ic_baseline_folder_24"
-        android:padding="12dp"/>
+        android:padding="12dp"
+        android:src="@drawable/ic_baseline_folder_24" />
 
     <TextView
+        android:id="@+id/tvChooseFile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="Choose File"
-        android:id="@+id/tvChooseFile"
-        android:textColor="?colorPrimary"
-        android:layout_gravity="center"/>
+        android:textColor="?colorPrimary" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFiles"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:id="@+id/rvFiles"
         android:layout_marginHorizontal="8dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:layout_marginTop="8dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
 </LinearLayout>
