--- a/app/src/main/res/layout/fragment_test2.xml
+++ b/app/src/main/res/layout/fragment_test2.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:padding="@dimen/_16sdp"
         android:text="Choose File"
         android:textColor="?colorPrimary" />
 
