--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -5,6 +5,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/ivChooseFile2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="@dimen/_16sdp"
+        android:text="next"
+        android:textColor="?colorPrimary" />
+
     <ImageView
         android:id="@+id/ivChooseFile"
         android:layout_width="100dp"
