--- a/app/src/main/res/navigation/nag_main.xml
+++ b/app/src/main/res/navigation/nag_main.xml
@@ -15,5 +15,13 @@
     <fragment
         android:id="@+id/test2Fragment"
         android:name="com.yehia.miranewfilepiker.Test2Fragment"
-        android:label="Test2Fragment" />
+        android:label="Test2Fragment" >
+        <action
+            android:id="@+id/action_test2Fragment_to_test3Fragment"
+            app:destination="@id/test3Fragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/test3Fragment"
+        android:name="com.yehia.myapplication.Test3Fragment"
+        android:label="Test3Fragment" />
 </navigation>
